generated/checkers/refine/KN-Buffer-Overflow-0f8ca019-4/build_logs/syntax-repair-refine-1-2/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘bool {anonymous}::getArrayConstSizeFromBase(const clang::ASTContext&, const clang::Expr*, uint64_t&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:427:31: error: parse error in template argument list
  427 |   } else if (const auto *ME = dyn_cast<MemberExpr)(E)) {
      |                               ^~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:427:31: error: unable to deduce ‘const auto*’ from ‘dyn_cast<<expression error> >’
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:427:31: note:   couldn’t deduce template parameter ‘auto’
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:427:54: error: expected ‘;’ before ‘)’ token
  427 |   } else if (const auto *ME = dyn_cast<MemberExpr)(E)) {
      |                                                      ^
      |                                                      ;
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:427:52: warning: statement has no effect [-Wunused-value]
  427 |   } else if (const auto *ME = dyn_cast<MemberExpr)(E)) {
      |                                                   ~^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:391:13: warning: ‘bool {anonymous}::containsDeclRefToVar(const clang::Expr*, const clang::VarDecl*)’ defined but not used [-Wunused-function]
  391 | static bool containsDeclRefToVar(const Expr *E, const VarDecl *V) {
      |             ^~~~~~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
